--- a/RabbitMQ/package.json
+++ b/RabbitMQ/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "amqplib": "^0.10.3"
+    "amqplib": "^0.10.3",
+    "express": "^4.18.2",
+    "pdfkit": "^0.14.0"
   }
 }
