--- a/RabbitMQ/package.json
+++ b/RabbitMQ/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "amqplib": "^0.10.3",
     "express": "^4.18.2",
-    "pdfkit": "^0.14.0"
+    "pdfkit": "^0.14.0",
+    "uuid": "^9.0.1"
   }
 }
