Refactor variable names for clarity

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,16 @@ Phase4/**/*
 Phase8_Express/node_modules/**/*
 Streams_Final/
 LibraryManagementMongo/LibraryManagementProject
+GraphQL
+GraphQL
+Medium Bypasser/manifest.json
+Medium Bypasser/service-worker-loader.js
+Medium Bypasser/assets/index.ts-5e297310.js
+Medium Bypasser/assets/index.ts-d2b7734e.js
+Medium Bypasser/assets/index.ts-loader-93fc80c2.js
+Medium Bypasser/icons/default/medium-48.png
+Medium Bypasser/icons/default/medium-64.png
+Medium Bypasser/icons/default/medium-128.png
+Medium Bypasser/icons/default/medium-256.png
+Medium Bypasser/icons/default/medium.png
+overrider/medium.com/the-marcy-lab-school/how-to-use-dataloader-js-9727c527efd0
