--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ Medium Bypasser/icons/default/medium-128.png
 Medium Bypasser/icons/default/medium-256.png
 Medium Bypasser/icons/default/medium.png
 overrider/medium.com/the-marcy-lab-school/how-to-use-dataloader-js-9727c527efd0
+GraphQL
