--- a/RabbitMQ_Project/threeServices/order/package.json
+++ b/RabbitMQ_Project/threeServices/order/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "order",
+  "name": "product",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,5 +8,18 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "amqplib": "^0.10.3",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.2.0"
+  },
+  "devDependencies": {
+    "@types/amqplib": "^0.10.4",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.11.20"
+  }
 }
