--- a/RabbitMQ_Project/threeServices/package.json
+++ b/RabbitMQ_Project/threeServices/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "jsonwebtoken": "^9.0.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21"
   }
 }
