--- a/OAuth_Tutorial/package.json
+++ b/OAuth_Tutorial/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "mongoose": "^8.2.0",
@@ -19,6 +20,7 @@
     "passport-oauth2": "^1.8.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.22",
     "@types/passport": "^1.0.16",
