--- a/OAuth_Tutorial/package.json
+++ b/OAuth_Tutorial/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "axios": "^1.6.7",
+    "date-fns": "^3.3.1",
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "mongoose": "^8.2.0",
